@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install prepare setup
+DEPEND=sys-devel/make dev-lang/perl sys-libs/zlib iso? ( sys-boot/syslinux virtual/cdrtools )
+DESCRIPTION=Open source network boot (PXE) firmware
+EAPI=5
+HOMEPAGE=http://ipxe.org
+IUSE=iso +qemu undi usb vmware
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+SLOT=0
+SRC_URI=https://git.ipxe.org/ipxe.git/snapshot/cba22d36b77da53890bd65fdadd0e63925687af0.tar.bz2 -> ipxe-1.0.0_p20130925-cba22d3.tar.bz2
+_eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953
+_md5_=ab23d3aaac1e4799d04fa124b2fdd7d5
