@@ -38,6 +38,7 @@ DIST ccpn-update-2.3.1-131008.patch.xz 4980 SHA256 f52ee972d459f6f3169b24b2858b1
 DIST ccpn-update-2.3.1-131010.patch.xz 7352 SHA256 f447df5334aac40847c9796421b5af8c4d290355b8f4a7de67ea6735683efca4 SHA512 865f3c39398f0c55a1f219d816c5a0395e9c7fa71b6f145c05959c39a4971c451f7162e9d23e5e0b000e0a2f7754bac6d458875b897bf3c3d4ed9a72f80a5561 WHIRLPOOL 60616ccaf6bdd2cabf6bf23813a761e00d8dca31ecb0e8d34c8a7ddc2983c8643a12392ccd7e1b5c356cc40456df9140801b842bc7170fa311c273cc5ed762db
 DIST ccpn-update-2.3.1-131015.patch.xz 7676 SHA256 df46e2f39ff6a9feda6bd9d4480d94af0f0282e318f6e3e27fc3d5b6ee1888db SHA512 c1ba9a0b9766a5317564978159a7e7c3176d382ff0e5d4547a372666309c614079254e772921761010e23ce61a81b1cdf4f99b3b58880ab9901ab372adea1055 WHIRLPOOL 4d008ac4c4861083091c557485afe0efd9dcfd982f1c241987743cb494f36ab084b27449cf2e528c2b95e2048dc67e90e58a4e0e3de283b81e17478b6900cff9
 DIST ccpn-update-2.3.1-131018.patch.xz 8152 SHA256 03d51dd46b68b426dce8dcdc479add7a3c865c98da1528854538422ebfb93952 SHA512 cf396501bdabca724cf691cb35a7acaafc5b7253f15eaf6c286a52afbf629b1babadd837facbafe50d9a960699647640ffc009ae58da4cd1c288b752ce8a96fc WHIRLPOOL dbb69d3df269cd569939783963243496552b3ea551a5e7e4362d2815aad533142a884183ca1bed3af4c54933eb03e835cc9b46662dc8021705507eeabbb6b2d3
+DIST ccpn-update-2.3.1-131107.patch.xz 9316 SHA256 d01b8cdde7f459027b731649526fa8bd84ce3fff6a3e10df8b26bd3a52df80dd SHA512 c18784d29d7f15ddf74229d0a44162595d953db76663450101e2d65ca7834dafd0137c2f5742d66a7b89a4af57149f49ce0bb01e62c198da3c93ca3c6a4c2002 WHIRLPOOL ef571e4a279a15e434bd264d9f1213c610a79dc9d9e4c0318ac99b29213ee2018ca02617b62632a791f61b9c7479586567983a43c698f4423d90a9aaa554c7d1
 EBUILD ccpn-2.1.3.1_p100806.ebuild 5181 SHA256 c3ba268461da63ea23ee7f621a8e4837a368eb3e4c85bcc5245250fb6b377b58 SHA512 701ea90a13dc44e5bf1ea17c0f69adea56b1c14788ab79c67fa4b9726cae532998717515568045aec9bb4e1dd4c352227130115d90c50bf07e7fd132cdee385d WHIRLPOOL 898a618f95b254785739e6fab20af333cb3a44bff12cd6840d1b111f1588a60e48055e8af7ca88457173452f6acba86ebd3bada96390211bc4cd063fe4160fd5
 EBUILD ccpn-2.2.2_p121125.ebuild 4612 SHA256 08a4b0682c049a6301138ea6f24d665edb0a8d8d709ed2c2f2529aa0a5e648a1 SHA512 f8c45f0b19a721775dab3147cced933e8db969e8443c15cd2bd2a31ffc3fcd0eda95acc75a93df5d0dd51dabd80fde8311a7b02bf3f6a051bc0855cb156755a5 WHIRLPOOL 427cacc0c080197cc79a867f1cf1d5bed45cbfbb0f8c5dc6456548218895ff25023ea30090e751af78b77fffd47f87f7aac3869a8ed13aa3727f2f12bac743b1
 EBUILD ccpn-2.2.2_p130110.ebuild 4649 SHA256 53125900943ea89ba3d3483de29a240a0e7282098af869a04bc926c34f3bf51f SHA512 8406a93562897aadfefd03e098b393af5fb29f9bfde8e5727b73ceb6cbe004b73cfd97b61e942189d9fba717761b20cc4914e5c9d858f36bbdbdeea1369490e7 WHIRLPOOL 112e9cab77898ef9246b127d5ef8529948cfaf91157a25bbe39899560af8340f8e5cbd1e2a3935dae083a9291f0d569d3cc5b7588dc2029f3342ecbe5590cb0f
@@ -58,22 +59,23 @@ EBUILD ccpn-2.3.1_p131008.ebuild 4685 SHA256 ae08a4a528ecc7828b6e176fed7ebe96735
 EBUILD ccpn-2.3.1_p131010.ebuild 4685 SHA256 8d98fd88b576a617f7b55d9b0de3ee5441828545e54baebaca1dc2914e188199 SHA512 400ca5f0efa2e5865544f0ca7a810fa3d1825b693b194cd5b58c84dff028c1aa8678c06c6f17a0f1cbfad4eb852c4d102429fba04803fae825e10522849866c4 WHIRLPOOL 5b9da2f81b0909037385988096f37937243a4110b752850c8f6505f06b372a4ce55534ae1a896f86040a17601a293c6caad765924efcd5f6d34236a3b0a851f4
 EBUILD ccpn-2.3.1_p131015.ebuild 4685 SHA256 0215b6ff8c9ee7247a3b4fbb48a9c37f9e7c95623d08afb7a50590134fca5e7e SHA512 fea0e8f85e82d0b4af0551465546cd78226126d7dbb2315949309a09854245db798f9054140f2355b687937c308c5365c672ccb3315cad8bd5e09f99b8a89bdf WHIRLPOOL 68ce200e5efbba9fbee4e0fa95f4a479868881655b51f76a2989a8079d2b30ad05a305270cbc862b9b39f259b9854bb8b6e4b66d7c446526e35ceef71b787984
 EBUILD ccpn-2.3.1_p131018.ebuild 4685 SHA256 b8274f2e758b6e7c3416cb8d424f4c5b5472ecd61ea7b7c59db9194c65e8f26e SHA512 8acb386dff52261169bb0e1f219d14107a8ec28494e61c6263ae71ff968140300a99c74fca495aa75c57cd81e1adfd05ed44f80abcb2d63bfe9a635cff63a35a WHIRLPOOL 39688e03bf1cf9e189c1ad0cf349be0fa6895efffd4afa05f472881dc732f6f3e0ea90e7715b7709be713d20535aa20801a66f6f044894c93d6e1241623dec7a
-MISC ChangeLog 23845 SHA256 0d77883a9490ff67cf5699e704f7d2a38c5517a3e30bef5f3769267021e198ad SHA512 970ebaeeb30d6057bd76c4ccc64f23abfeee4a279fccce14492a5f6aa103b09404b441b86ff814935cac2a985f59d4fc5ada0d9bbf0865c648569a1258812a20 WHIRLPOOL 7f7a740bb80d2882c2338a33b67a1cd25ad6242b598ce0aec562eacabe1a7b95da68a400f0b7d404ec8f478969df7b71ff665681346cbfeb813aab742225ba84
+EBUILD ccpn-2.3.1_p131107.ebuild 4685 SHA256 e4cf9af1788357b96c1f8e805dbc19be0604af6b34cb983fe0aa735f95b6e290 SHA512 5ad8389563552d00b28ce067b76a592365e6d61a8d6aab85650e2c8031a60bfe912ee0f7bdfec536157e07a3e62bcf82735986e0faf5be3d52778a56d5c1596b WHIRLPOOL 6309bfd9355ed20089341820ff77bb8dc70100ebb937f9604a0222c85d070e4dd88e27693e6ab7c229fffdaa9a36cf531b54feb2c18f302e716191315d6f5318
+MISC ChangeLog 23980 SHA256 cfc5bf5f6cb29b7093b0de8b836612db1c5f4aee55a8587d093861a242f061ee SHA512 2698fabb55d74a29b9af9045a9bf503cb32430fbe89a3edb4dddd3dffedab1f26a22018e601bcd541bccf9915b2805ed097192a444b875be72bc30ff277a176e WHIRLPOOL 53ad12cb95379c86446176b672c77d935456364a64851143569ce2dad0802dac47e460b01236b9c634e12d01fb826c5793d6ae346ab4e22fb54d7a543e86f043
 MISC metadata.xml 234 SHA256 8297e76ecd2cb828f604e9f138b263179eb84beb640215a0f60d7613eb46bb7f SHA512 0e94c0e6570a9267a39968d81c3b80680ccbc6eebb62199e4830b021a114c94a0de17ef2103cef62b7e27da1f51f225a30abb802aff82140ae6dc43366113d31 WHIRLPOOL fa6d4d90b092953b88ed3ad03e1e8c189296d268b39d13a4b4dcb78f0c4456341e3f1b44eea0860054fee43079179cb7cf7a912acf1fbe693ecdca6d9a65f081
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSYN5EAAoJELnU8jG9FVir5pYQAKMB3Aq+zwCDbF92mNHHK7yW
-JYcGIXX5xeyNGXWhwDTSdsLzP6iX+q2FTSyHDhRgkhTnMDJdQnp5GsC4QcJC8roz
-QW4CWY3r1P1zCU7Cu0q7gBetlIpbGQ9OOMgWhoNhVQc8/qJlErXcaoF2cEg8Hgd1
-9uOlIVgLUS1rPvh+b/wNxeH7DYMevK6YjrYo+Sn5gbcXIfPvrJNofSlEG+G/gyaw
-P0O5BZuCB/7OETy3E95j3B3sCqEhcygxoOj302CisXHDs0fb8SkbDosaDWEfVMbL
-PXBNwBbh3IWIosPgPr4CmSQ3zvdata0vzNO1g3nkEZjDXKHLnfJ4abfEVdioz7Ko
-wQGhOm91KsCrnz6YJtTGPSJV69N9Hznjx9onEJsjB1JqRGXCdvLo/hWsA3CB+l9F
-nEvL11fjjnLYysWNAtbN9QjzDBVGG2TdKeeUEQoGgBksqUmljJhFWBLeGcbglQ12
-Aiknt4IB8R14v7k0gHg+v1wrsBQTGlH5toUEC8VhGEjKzAmxXSUguhI9ZpxtgBJ3
-K7w/gI89INRUtymN79fje3YkJDK12tDWnLYXT9FOb1u0JxswJxek98aA0KvoC3/v
-IU+N58diTgDX6PRAnEJdWv1OJcUKr6MD7jXQFN9rGuc0gucLIHULpQ+58KFaJjqP
-WN+b04leTqdHJEq06fRN
-=FAhk
+iQIcBAEBCgAGBQJSe7imAAoJELnU8jG9FVirn2MP/1eGPUsBjDKephu66DawJvnJ
+JrgkDnMPCv7PL6zMzPaY8L2VcGdHQBOjURPY/vbRhYbGcSy0n6YL6jJGWpX+iY36
+Oy+k0Niw0ZGlKHT5tUUzgNJh7oKbwKFRCOaRYBf3baUAGFUaJ+n6RESbW2GtTMfS
+2QXcsUr4YgsTPr7o2gqOkMk2RR7zQv1kqSF9nk0OvmazD0qiqf8+FeUn7m/sQ46b
+zCZrKY/wBsSAd6d83Ar44WFYTPeWu42FccIcggVifC3DrYn+j5FDp84QV1aIsqJE
+PSO8I/bjEjJqD1di+CtvhRXC8inV5advq5Xagb3nBtiaxTh95irSgN74ycrWV4Du
+C8ld1mB+1YocxCs+GWWB8/efANwxQ8NTA+8P4SM5kjNZDLQ2W61Sz8uSWOLFsvu9
+qvYr16kgkNB5RQ2AOhLy2pbGWVbYuApcgCPpq/qGxBg/z6vlAes6FhSlpXQf0HGj
+d9/3w97poWBrWhq49gXPT9f2vLhjtQuECVlHOyksZJIsKxiHYl3igRRTuD2Q+ogb
+976xR32Tip86eVolT5vbERQnWdeLihsiYH+aGVq1h2SwQHcglVDNVqxOgp5sIqEi
+QIaEWlwP6FoVIoecpoF5LAqzYtEp0UBLYYUqeFMO0G/Q9d9Dc3M2qdgDEm0L8p9z
+9A+kubRITTiC0QIpuqWi
+=lWAI
 -----END PGP SIGNATURE-----
