@@ -1,28 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST e6427b7ee117ea4af0812bb13b57999bccd8e058.tar.bz2 2198003 SHA256 008a80b80a8b19ef6963581b5599880d51171aad13f96690589cbc0fa895eaf3 SHA512 8456ef3c27f3f4de827ae4c744cbe2eaacb96cf703a5525f490c53ac26ed597635acb744a50607d733d7bd5014dcbbb333f74da8fe68fddca19e11d047377d73 WHIRLPOOL 814cda89fa52afec2b1a8811407ce3b361c1d7548e40255fdffda2bd0fbb8485352575f19b6935de50582a97c31758cd9bcc2194cb2b222b89313868a032a828
 DIST ipxe-1.0.0_p20130225-09c5109.tar.bz2 2208235 SHA256 58fd3470c4807c7206550badbc709c9a48af201b4bfa629379143b21426189fa SHA512 74b72a336ee4874ee134fe2bfa8540a864ddd169e09a7d6dfa688624f674962ea33f01bb287b90fda0cdfe5bf4d38e49362934c22a2da932dd3e4c702ebd56dc WHIRLPOOL fad62b8d15bb67ab194954671ae9e1cfa0df06c2d237b9312994ecaf440f0bb22b72ba28824ee8a13c19fe90f8bd3b2847a80d93da5f10368b096cdfa8230a06
 DIST ipxe-1.0.0_p20130624-936134e.tar.bz2 2230605 SHA256 bbf9435515a481ab4e5bfc4e49d5eeb005b60169bad3db269e31228fafbb7bbc SHA512 8a1332794acd0db7bf485bfc2c1c52b4e7e5545e5cc1e4e39bbe6f190a684682613b063cc5c31c94d7715fa07555a851f04abb45e604325c0bb4ab73526df0c9 WHIRLPOOL 1338fc4f8bf69a98713d72ad0a8749bc53e42d99c8088e5536b78001d0f738dcc8aaa537cce7dcb5f4f66818880b936c964fc6bed8ff00e674cf400da9521f5b
+DIST ipxe-1.0.0_p20130925-cba22d3.tar.bz2 2240189 SHA256 c9c819bac8a925aad30ac88a23a86dd5591a9c31846058e77465d05551fc6189 SHA512 a098d3fc0f68067be281b9c3654bb1b0be1b9d397327b55b36b17e69faf03ce6117d0278552c06990a5020e4ece7acac168d975b3c7bfce3b6865dea1fd1d8dd WHIRLPOOL 11442ea81032b4c9c00d3c1346761163cbcf2db2bc957bfbaba74c7f9109136bf5334e26752f9d10a8ed0f093ae39fd28e4152d522aa4dd86e4d1c05695d7d3a
 EBUILD ipxe-1.0.0_p20120905.ebuild 1736 SHA256 6f5fa565d43bee60cc94023f93e21cb5e5d2247d2740d477014ca70d13434429 SHA512 7ee3a59899941bb80cfbad7b0c09301bcd2b0fdc070382a77fa46972451b4abdd0a9085ff09231b18c69ffff6a94806845e149e7b1512bd52a91ebffd5f8fe6b WHIRLPOOL 3449f9f7a0e0c58de80adf05a02bdc1d4151a353e561c000b0ca4ba2c78bb51b3b447995db62cc82a67492712a13c2f68560c96da1ea558c0eac6a63e930ee3f
 EBUILD ipxe-1.0.0_p20130225.ebuild 1923 SHA256 c6f6e5928b38f5848b101d4bf1135abdd628cf5c9c30fee567d3bde595917c2a SHA512 20b13e4750ef7a79cde0751225b8286e3498cf69799d7553e02d94ab40ec745ca355813424cc7dce24862fdc8c2a188a1a0671676953911d3917656c0330396c WHIRLPOOL 6e6a26b99522ea58144cf8a4ab3ce6389138866b692daabd6735e90ee5d0b7f69772de22874421771bf57eb55899509598843722ca3923f06cce7f3d47d2e6c4
 EBUILD ipxe-1.0.0_p20130624.ebuild 2335 SHA256 9476a77b583cddea480c042a09a0c0bb4f598ad7be371f57dc536fd82c8fe15d SHA512 d3731dd9f31e8782d95d3b2279699f31cb8d0f6ce0c9694f970d9b0db9d86023346840c5a3b2b58e1d58c635cffcf108cb7d9d8ce7d5dbf21a522ccb88e1219f WHIRLPOOL 2a82f85e809e7866ad2368760c96b624a02f08e0e6ad8de207dd7f5ec047f544b825949e749b63146258aff545aa442a916aa88d997edfdc80a03ce33ff05674
-MISC ChangeLog 2370 SHA256 5201b0f2d49807087d09f59ddfd00706a90eacfc24cd75aa61375add7c112184 SHA512 9510ace04a072a060d96a98b1b925c1d3a15bed0483b76a0b4bfcc3193f88057b8496925a69778f1a4c4acbd59462d5081570c64758625bac9652bbe6bd7a21c WHIRLPOOL 21849d14246ab43df8e6fa9dabefada3de59b8fc6f240d4f29b6e6004572e6c2680658476140998ac2b35d942af97a12b2905fa862c5d730c260ea02ad25235a
+EBUILD ipxe-1.0.0_p20130925.ebuild 2340 SHA256 6f81532f345c1733b3194622125448df9464b94877f9aed032409badd173ba31 SHA512 5b09e65f882d5b27f1afce83615c1b1fe56e651a596b37d1ce12eb6f397c773ac25099eabc3c86b14405da4eec262840bef8880c586ee54e22cc6cd72f52880a WHIRLPOOL 7e840c9bcbcff3f48aced69de22cc43473b15a1cf14d70eac0333b789fac2c0bb987f92bfbf84d45d752644c64f86efe5784b2d206704f4993771486cb4bb6df
+MISC ChangeLog 2553 SHA256 9fd618510103b6478b7513ea1dfcff0049f29c0968a65a86213f6cdefbbe282a SHA512 9fe766945b8f6b149793cd1cedea63a4a05fe27c1cfb93f67342c403c4c3a36bac66d6399e9a140c520b587213bb30ad63ad8eb80aab360ea1722cc82b8ef89b WHIRLPOOL 6167d053fbf2cc32bbadeb3094b47ca45ce3b07586f1a426832adc8aba2147f9a5de228153501b055644724f73df8e6e3864b4daadbb2caa534cfaf24d9027dc
 MISC metadata.xml 691 SHA256 f0f4dc35384ae2bbc0e938812ae3ec259c490e101fe978e2a7cc8ce8eb3d6a7b SHA512 1e1063f205a4a284224e229fa675f6eb83f03ee80c3874198740da15744961664c3f6fe0ec6c1211dcabfe1204bc92ec355b98075c5d626c3493bfbc7de08ae7 WHIRLPOOL 435dfad45383449b30a12b1caf484f05b39102d5132c9dd5573fddb84cfa2c987e6db700b0bc656e821cbc7fde5b04af5504fd367d665027b7eeef06853ff413
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSKf60AAoJELp701BxlEWfKhIQALfJ0JWvdEmjCN8xHhGO/x+j
-CwnNT04okv+5FUlm0WbmdhOu+8FY7T4iNTAxNySrHhcnGokrCNoQ0/6pGUVmw7o4
-iDX2+QH21TpCiATWWY+/eMP6xU4BFCHt0xOIOXrZlCt09pTxs8KUq9z5z0YNjPfd
-czmpo1bBzd2fGERKZyrA3th6L6SIOInf5FMyuRVRdA3SdeXKJVgqWT8O3TOti8f1
-1S2W/IT4SxxaUI/NW9eJ3fgCEliFQO3ovkYal4Ds9I2k85WsDbe4v7Uaw626+yWG
-1TWKLHfDyyUdJZjWbN8Ux74PpJdVYYWZIopcrawy8TlPG3rdeqOEkYnltjEYJ7JA
-/CbdiVajnWoIO7Lnln33Y4hwvGT/oAfhb4ogsQnbV2KAsZI23DYFvfBF5MPOE205
-j7gYCue1iF3gKbg0sMLB0jy114mKPohDpBHrEPFTgFPaEr9M0RI7pBttiycldgJs
-SU2QjGYX4tNkI25ETYMrLyYLpV+WTR93RX11BnhApGAD9CNd97bNUl0/9FIeuvlC
-gtU5FsOxw7UxxAoPKM1zY4qdlh72HkmKdlETnGSBxH8zam8T1LFxDQ6qSH361Ezo
-mvAM+7ektV9wqo9t0wFhCEK83WwdBCX/0gy+H2TG/Nzj9f1TTgmyq2ToXtQBR6Ca
-JrCg9EZwtHfbAyTcJ8zl
-=m0Hi
+iQF8BAEBCABmBQJSe7ZdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRDMDRGNEJFMDZEQTJGRUY3NkI4MEM3NTlE
+N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvfjEH/3NCXXNqnUKpOrtadsYlmuPB
+8uj3wonH5slwMwbkJNthK+ri41nrOEnL8hQbHOZtiID/XT1vnS9XNMZ6jgoDo3fe
+U+U9n4NiQkKoisgYYlN4qT6q2lKlOCSt0LNcsXtPwqdVvBOxLYa7GxQqaYYmMGv8
+UmnNDTaEqDt6BqcXrACpuUsepfzAi7DGPHS50Y+6eEpQPbaIonlMkOPiAxslsXch
+R6JGJ94+1bGzBZY9oHn/k0Fvq1lPvmKAiQDgYLeOegFcjZKciSsWMUv9MGpPVFjH
+zntq1qNPg9ZDxFnNH/qym7j086NIjv2SFbNVusd/OJmEpfqZKOFAcPT60pOkwdM=
+=kBxi
 -----END PGP SIGNATURE-----
